--- a/config/config.json
+++ b/config/config.json
@@ -4,20 +4,21 @@
     "username": "root",
     "password": "Password",
     "database": "vc_chat",
+    "host": "host.docker.internal",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
     "password": null,
     "database": "database_test",
-    "host": "127.0.0.1",
+    "host": "host.docker.internal",
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
     "password": null,
     "database": "database_production",
-    "host": "127.0.0.1",
+    "host": "host.docker.internal",
     "dialect": "mysql"
   }
 }
